[tool.black]
line-length = 119

[project]
name = "anthropic-proxy"
version = "0.1.0"
description = "Proxy between Claude Code and Anthropic API with Langfuse tracing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "black",
    "fastapi[standard]>=0.115.11",
    "langfuse>=2.0.0,<3.0.0",
    "pylint",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.0",
]
