[tool.black]
line-length = 119

[project]
name = "anthropic-proxy"
version = "0.1.0"
description = "Proxy between Claude Code and Anthropic API with Langfuse tracing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "black",
    "fastapi[standard]",
    "langfuse",
    "pylint",
    "python-dotenv",
    "uvicorn",
]
