[tool.black]
line-length = 119

[project]
name = "anthropic-proxy"
version = "0.1.0"
description = "Direct proxy for Anthropic API with logging and tracing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "black",
    "fastapi[standard]",
    "langfuse<3.0.0",
    "pylint",
    "python-dotenv",
    "uvicorn",
]
